--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -96,7 +96,7 @@
                     <h2 class="text-2xl lg:text-3xl font-bold text-gray-900">
                         Sign in
                     </h2>
-                    <form class="mt-8 space-y-6" action="#">
+                    <form class="mt-8 space-y-6" action="/auth/login-submit" method="POST">
                         <div>
                             <label for="email" class="text-sm font-medium text-gray-900 block mb-2">Your email</label>
                             <input type="email" name="email" id="email"
