--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,7 +15,10 @@
                         <li><a href="shop.html">Our Shop</a></li>
                         <li><a href="product-details.html">Product Details</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="#">Xin Chào <%= existingUser.name %></a></li>
+                        <li><a href="/user">Xin Chào <%= existingUser.name %></a></li>
+                        <form action="/auth/logout" method="POST" style="display:inline;">
+                            <button type="submit">Logout</button>
+                        </form>
                     </ul>
                     <a class='menu-trigger'>
                         <span>Menu</span>
