user-profile-edit-update

--- a/src/views/admin/userList.ejs
+++ b/src/views/admin/userList.ejs
@@ -384,7 +384,7 @@
                                                 </td>
                                                 <td
                                                     class="p-4 flex items-center whitespace-nowrap space-x-6 mr-12 lg:mr-0">
-                                                    <img class="h-10 w-10 rounded-full" src="<%= user.avatar %>"
+                                                    <img class="h-10 w-10 rounded-full" src="<%= user.avatar.url %>"
                                                         alt="<%= user.name %> avatar">
                                                     <div class="text-sm font-normal text-gray-500">
                                                         <div class="text-base font-semibold text-gray-900">
