--- a/src/public/asset/css/userProfiles.css
+++ b/src/public/asset/css/userProfiles.css
@@ -1,8 +1,3 @@
-body {
-    margin-top: 20px;
-    color: #9b9ca1;
-}
-
 .bg-secondary-soft {
     background-color: rgba(208, 212, 217, 0.1) !important;
 }
@@ -65,4 +60,25 @@ body {
     transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+}
+
+/* .header {
+    background: url(../images/page-heading-bg.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 3% 0px;
+} */
+
+.content {
+    background-image: url(/asset/images/banner-bg.jpg);
+    border-radius: 0px 0px 150px 150px;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 225px 0px;
+}
+
+.backgound-white {
+    background-color: rgb(255, 255, 255);
 }
