--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,13 +5,13 @@
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
+                    <a href="/" class="logo">
                         <img src="assets/images/logo.png" alt="" style="width: 158px;">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li><a href="index.html" class="active">Home</a></li>
+                        <li><a href="/" class="active">Home</a></li>
                         <li><a href="shop.html">Our Shop</a></li>
                         <li><a href="product-details.html">Product Details</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
