--- a/src/views/admin/userList.ejs
+++ b/src/views/admin/userList.ejs
@@ -114,16 +114,7 @@
                     </form>
                 </div>
                 <div class="flex items-center">
-                    <div class="hidden lg:flex items-center">
-                        <span class="text-base font-normal text-gray-500 mr-5">Open source ❤️</span>
-                        <div class="-mb-1">
-                            <a class="github-button"
-                                href="https://github.com/themesberg/windster-tailwind-css-dashboard"
-                                data-color-scheme="no-preference: dark; light: light; dark: light;"
-                                data-icon="octicon-star" data-size="large" data-show-count="true"
-                                aria-label="Star themesberg/windster-tailwind-css-dashboard on GitHub">Star</a>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -158,7 +149,7 @@
                                 </form>
                             </li>
                             <li>
-                                <a href="https://themewagon.github.io/windster/"
+                                <a href="/admin"
                                     class="text-base text-gray-900 font-normal rounded-lg flex items-center p-2 hover:bg-gray-100 group">
                                     <svg class="w-6 h-6 text-gray-500 group-hover:text-gray-900 transition duration-75"
                                         fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -311,28 +302,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="flex items-center space-x-2 sm:space-x-3 ml-auto">
-                                <button type="button" data-modal-toggle="add-user-modal"
-                                    class="w-1/2 text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium inline-flex items-center justify-center rounded-lg text-sm px-3 py-2 text-center sm:w-auto">
-                                    <svg class="-ml-1 mr-2 h-6 w-6" fill="currentColor" viewBox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                    Add user
-                                </button>
-                                <a href="#"
-                                    class="w-1/2 text-gray-900 bg-white border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-cyan-200 font-medium inline-flex items-center justify-center rounded-lg text-sm px-3 py-2 text-center sm:w-auto">
-                                    <svg class="-ml-1 mr-2 h-6 w-6" fill="currentColor" viewBox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M6 2a2 2 0 00-2 2v12a2 2 0 002 2h8a2 2 0 002-2V7.414A2 2 0 0015.414 6L12 2.586A2 2 0 0010.586 2H6zm5 6a1 1 0 10-2 0v3.586l-1.293-1.293a1 1 0 10-1.414 1.414l3 3a1 1 0 001.414 0l3-3a1 1 0 00-1.414-1.414L11 11.586V8z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                    Export
-                                </a>
-                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -357,11 +327,11 @@
                                             </th>
                                             <th scope="col"
                                                 class="p-4 text-left text-xs font-medium text-gray-500 uppercase">
-                                                Position
+                                                Role
                                             </th>
                                             <th scope="col"
                                                 class="p-4 text-left text-xs font-medium text-gray-500 uppercase">
-                                                Country
+                                                City
                                             </th>
                                             <th scope="col"
                                                 class="p-4 text-left text-xs font-medium text-gray-500 uppercase">
@@ -396,10 +366,10 @@
                                                     </div>
                                                 </td>
                                                 <td class="p-4 whitespace-nowrap text-base font-medium text-gray-900">
-                                                    Front-end developer</td>
+                                                    <%= user.role %>
+                                                </td>
                                                 <td class="p-4 whitespace-nowrap text-base font-medium text-gray-900">
-                                                    United
-                                                    States</td>
+                                                    <%= user.city %>
                                                 <td class="p-4 whitespace-nowrap text-base font-normal text-gray-900">
                                                     <div class="flex items-center">
                                                         <div class="h-2.5 w-2.5 rounded-full bg-green-400 mr-2"></div>
@@ -421,6 +391,7 @@
                                                         Edit user
                                                     </button>
                                                     <button type="button" data-modal-toggle="delete-user-modal"
+                                                        data-_id="<%= user._id %>"
                                                         class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-3 py-2 text-center">
                                                         <svg class="mr-2 h-5 w-5" fill="currentColor"
                                                             viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -716,11 +687,28 @@
         </div>
 
     </div>
+    <form action="" method="POST" id="delete-user-form">
 
 
-
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="https://themewagon.github.io/windster/app.bundle.js"></script>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <script src="https://themewagon.github.io/windster/app.bundle.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                var deleteUserForm = document.getElementById('delete-user-form');
+                var deleteButtons = document.querySelectorAll('button[data-modal-toggle="delete-user-modal"]');
+                deleteButtons.forEach(function (button) {
+                    button.addEventListener('click', function () {
+                        var userId = this.getAttribute('data-_id');
+                        var confirmButton = document.querySelector('#delete-user-modal a.bg-red-600');
+                        confirmButton.addEventListener('click', function (event) {
+                            event.preventDefault();
+                            deleteUserForm.action = '/admin/delete-user/' + userId + '?_method=DELETE';
+                            deleteUserForm.submit();
+                        });
+                    });
+                });
+            });
+        </script>
 </body>
 
 </html>
