--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -39,6 +39,12 @@
                                     <input type="email" name="email" class="form-control" id="inputEmail4"
                                         value="<%= existingUser.email %>">
                                 </div>
+                                <!-- Place -->
+                                <div class="col-md-6">
+                                    <label class="form-label">City</label>
+                                    <input type="text" name="city" class="form-control" placeholder="" aria-label="city"
+                                        value="<%= existingUser.city %>">
+                                </div>
                             </div> <!-- Row END -->
                         </div>
                     </div>
