restore-and-delete-user-update

--- a/src/views/auth/signUp.ejs
+++ b/src/views/auth/signUp.ejs
@@ -114,7 +114,7 @@
                         <div>
                             <label for="phone" class="text-sm font-medium text-gray-900 block mb-2">Your Phone
                                 Number</label>
-                            <input type="tel" name="phone" id="phone"
+                            <input type="tel" name="phone_number" id="phone"
                                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
                                 required>
                         </div>
