edit-product-update

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -6,7 +6,7 @@
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
                     <a href="/" class="logo">
-                        <img src="assets/images/logo.png" alt="" style="width: 158px;">
+                        <img src="/assets/images/logo.png" alt="" style="width: 158px;">
                     </a>
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
@@ -15,7 +15,7 @@
                         <li><a href="shop.html">Our Shop</a></li>
                         <li><a href="product-details.html">Product Details</a></li>
                         <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="/user">Xin Chào <%= existingUser.name %></a></li>
+                        <li><a href="/user/">Xin Chào <%= existingUser.name %></a></li>
                         <form action="/auth/logout" method="POST" style="display:inline;">
                             <button type="submit">Logout</button>
                         </form>
