--- a/src/views/admin/userList.ejs
+++ b/src/views/admin/userList.ejs
@@ -171,7 +171,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://themewagon.github.io/windster/e-commerce/products/"
+                                <a href="/admin/product-list"
                                     class="text-base text-gray-900 font-normal rounded-lg hover:bg-gray-100 flex items-center p-2 group ">
                                     <svg class="w-6 h-6 text-gray-500 flex-shrink-0 group-hover:text-gray-900 transition duration-75"
                                         fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -405,7 +405,8 @@
                                                     </td>
                                                     <td class="p-4 whitespace-nowrap space-x-2">
                                                         <button type="button" data-modal-toggle="user-modal"
-                                                            class="text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm inline-flex items-center px-3 py-2 text-center">
+                                                            data-_id="<%= user._id %>"
+                                                            class="text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm inline-flex items-center px-3 py-2 text-center edit-user-btn">
                                                             <svg class="mr-2 h-5 w-5" fill="currentColor"
                                                                 viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                                                 <path
@@ -511,66 +512,36 @@
                             </div>
                             <!-- Modal body -->
                             <div class="p-6 space-y-6">
-                                <form action="#">
+                                <form method="POST" id="edit-user-form">
                                     <div class="grid grid-cols-6 gap-6">
                                         <div class="col-span-6 sm:col-span-3">
-                                            <label for="first-name"
-                                                class="text-sm font-medium text-gray-900 block mb-2">First Name</label>
-                                            <input type="text" name="first-name" id="first-name"
+                                            <label for="name"
+                                                class="text-sm font-medium text-gray-900 block mb-2">Name</label>
+                                            <input type="text" name="name" id="name"
                                                 class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
                                                 placeholder="Bonnie" required>
                                         </div>
                                         <div class="col-span-6 sm:col-span-3">
-                                            <label for="last-name"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Last Name</label>
-                                            <input type="text" name="last-name" id="last-name"
+                                            <label for="address"
+                                                class="text-sm font-medium text-gray-900 block mb-2">Address</label>
+                                            <input type="text" name="address" id="address"
                                                 class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="Green" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="email"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Email</label>
-                                            <input type="email" name="email" id="email"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="example@company.com" required>
+                                                placeholder="123 Main St" required>
                                         </div>
                                         <div class="col-span-6 sm:col-span-3">
                                             <label for="phone-number"
                                                 class="text-sm font-medium text-gray-900 block mb-2">Phone
                                                 Number</label>
-                                            <input type="number" name="phone-number" id="phone-number"
+                                            <input type="number" name="phone_number" id="phone-number"
                                                 class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
                                                 placeholder="e.g. +(12)3456 789" required>
                                         </div>
                                         <div class="col-span-6 sm:col-span-3">
-                                            <label for="department"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Department</label>
-                                            <input type="text" name="department" id="department"
+                                            <label for="city"
+                                                class="text-sm font-medium text-gray-900 block mb-2">City</label>
+                                            <input type="text" name="city" id="city"
                                                 class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
                                                 placeholder="Development" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="company"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Company</label>
-                                            <input type="number" name="company" id="company"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="123456" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="current-password"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Current
-                                                Password</label>
-                                            <input type="password" name="current-password" id="current-password"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="••••••••" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="new-password"
-                                                class="text-sm font-medium text-gray-900 block mb-2">New
-                                                Password</label>
-                                            <input type="password" name="new-password" id="new-password"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="••••••••" required>
                                         </div>
                                     </div>
                             </div>
@@ -578,94 +549,13 @@
                             <div class="items-center p-6 border-t border-gray-200 rounded-b">
                                 <button
                                     class="text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-                                    type="submit">Save all</button>
+                                    type="button" id="save-all-btn">Save all</button>
                             </div>
                             </form>
                         </div>
                     </div>
                 </div>
 
-                <!-- Add User Modal -->
-                <div class="hidden overflow-x-hidden overflow-y-auto fixed top-4 left-0 right-0 md:inset-0 z-50 justify-center items-center h-modal sm:h-full"
-                    id="add-user-modal">
-                    <div class="relative w-full max-w-2xl px-4 h-full md:h-auto">
-                        <!-- Modal content -->
-                        <div class="bg-white rounded-lg shadow relative">
-                            <!-- Modal header -->
-                            <div class="flex items-start justify-between p-5 border-b rounded-t">
-                                <h3 class="text-xl font-semibold">
-                                    Add new user
-                                </h3>
-                                <button type="button"
-                                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center"
-                                    data-modal-toggle="add-user-modal">
-                                    <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
-                                        xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd"
-                                            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                                            clip-rule="evenodd"></path>
-                                    </svg>
-                                </button>
-                            </div>
-                            <!-- Modal body -->
-                            <div class="p-6 space-y-6">
-                                <form action="#">
-                                    <div class="grid grid-cols-6 gap-6">
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="first-name"
-                                                class="text-sm font-medium text-gray-900 block mb-2">First Name</label>
-                                            <input type="text" name="first-name" id="first-name"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="Bonnie" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="last-name"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Last Name</label>
-                                            <input type="text" name="last-name" id="last-name"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="Green" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="email"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Email</label>
-                                            <input type="email" name="email" id="email"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="example@company.com" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="phone-number"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Phone
-                                                Number</label>
-                                            <input type="number" name="phone-number" id="phone-number"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="e.g. +(12)3456 789" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="department"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Department</label>
-                                            <input type="text" name="department" id="department"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="Development" required>
-                                        </div>
-                                        <div class="col-span-6 sm:col-span-3">
-                                            <label for="company"
-                                                class="text-sm font-medium text-gray-900 block mb-2">Company</label>
-                                            <input type="number" name="company" id="company"
-                                                class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-cyan-600 focus:border-cyan-600 block w-full p-2.5"
-                                                placeholder="123456" required>
-                                        </div>
-                                    </div>
-                            </div>
-                            <!-- Modal footer -->
-                            <div class="items-center p-6 border-t border-gray-200 rounded-b">
-                                <button
-                                    class="text-white bg-cyan-600 hover:bg-cyan-700 focus:ring-4 focus:ring-cyan-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-                                    type="submit">Add user</button>
-                            </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
 
                 <!-- Delete User Modal -->
                 <div class="hidden overflow-x-hidden overflow-y-auto fixed top-4 left-0 right-0 md:inset-0 z-50 justify-center items-center h-modal sm:h-full"
@@ -766,6 +656,7 @@
             document.addEventListener('DOMContentLoaded', function () {
                 var getAllUserForm = document.getElementById('get-all-users-form');
                 var getAllUserBtn = document.querySelector('button[data-modal-toggle="delete-all-user-modal"]');
+                var editUserBtn = document.querySelectorAll('.edit-user-btn');
                 getAllUserBtn.addEventListener('click', function () {
                     var confirmButton = document.querySelector('#delete-all-user-modal a.bg-red-600');
                     confirmButton.addEventListener('click', function (event) {
@@ -801,6 +692,32 @@
                     });
                 });
 
+                //edit 
+                const editUserForm = document.getElementById("edit-user-form");
+                const saveAllBtn = document.getElementById("save-all-btn");
+                const nameInput = document.getElementById("name");
+                const addressInput = document.getElementById("address");
+                const phoneInput = document.getElementById("phone-number");
+                const cityInput = document.getElementById("city");
+                editUserBtn.forEach(btn => {
+                    btn.addEventListener("click", async function () {
+                        const userId = this.getAttribute("data-_id");
+                        const res = await fetch("/admin/edit-user/" + userId, {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({ userId })
+                        });
+                        const getUser = await res.json();
+                        nameInput.value = getUser.name;
+                        addressInput.value = getUser.address;
+                        phoneInput.value = getUser.phone_number;
+                        cityInput.value = getUser.city;
+                        saveAllBtn.addEventListener("click", function () {
+                            editUserForm.action = "/admin/update-user/" + userId + "?_method=PUT";
+                            editUserForm.submit();
+                        });
+                    });
+                });
 
 
                 //check box 
