--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -11,14 +11,14 @@
     <title>QA TẾCH</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="asset/css/fontawesome.css">
-    <link rel="stylesheet" href="asset/css/templatemo-lugx-gaming.css">
-    <link rel="stylesheet" href="asset/css/owl.css">
-    <link rel="stylesheet" href="asset/css/animate.css">
+    <link rel="stylesheet" href="/asset/css/fontawesome.css">
+    <link rel="stylesheet" href="/asset/css/templatemo-lugx-gaming.css">
+    <link rel="stylesheet" href="/asset/css/owl.css">
+    <link rel="stylesheet" href="/asset/css/animate.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <!--
 
@@ -51,12 +51,12 @@
     </div>
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="asset/js/isotope.min.js"></script>
-    <script src="asset/js/owl-carousel.js"></script>
-    <script src="asset/js/counter.js"></script>
-    <script src="asset/js/custom.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/asset/js/isotope.min.js"></script>
+    <script src="/asset/js/owl-carousel.js"></script>
+    <script src="/asset/js/counter.js"></script>
+    <script src="/asset/js/custom.js"></script>
 
     </body>
     <% if (typeof toastMessage !=='undefined' ) { %>
