--- a/src/public/asset/css/userProfiles.css
+++ b/src/public/asset/css/userProfiles.css
@@ -62,22 +62,24 @@
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
 }
 
-/* .header {
-    background: url(../images/page-heading-bg.jpg);
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 3% 0px;
-} */
-
-.content {
-    background-image: url(/asset/images/banner-bg.jpg);
-    border-radius: 0px 0px 150px 150px;
-    background-position: center bottom;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 225px 0px;
+.square {
+    width: 150px;
+    /* Hoặc kích thước bạn muốn */
+    height: 150px;
+    /* Hoặc kích thước bạn muốn */
+    position: relative;
+    overflow: hidden;
+    /* Ẩn phần ảnh tràn ra */
 }
+
+.square img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* cover giữ tỉ lệ và lấp đầy div */
+    display: block;
+}
+
 
 .backgound-white {
     background-color: rgb(255, 255, 255);
