--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,46 @@
-<footer>
-    <div class="container">
-        <div class="col-lg-12">
-            <p>Copyright © 2048 LUGX Gaming Company. All rights reserved. &nbsp;&nbsp; <a rel="nofollow"
-                    href="https://templatemo.com" target="_blank">Design: TemplateMo</a></p>
+<div class="container">
+    <div class="footer-content">
+        <div class="footer-column">
+            <h3>Exclusive</h3>
+            <div class="subscribe-form">
+                <input type="email" placeholder="Enter your email">
+                <button><i class="fas fa-paper-plane"></i></button>
+            </div>
+            <p>Get 10% off your first order</p>
+        </div>
+
+        <div class="footer-column">
+            <h3>Support</h3>
+            <ul>
+                <li>11 Bijoy sarani, Dhaka, DH 1515, Bangladesh</li>
+                <li>exclusive@gmail.com</li>
+                <li>+88015-88888-9999</li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Account</h3>
+            <ul>
+                <li><a href="#">My Account</a></li>
+                <li><a href="#">Login / Register</a></li>
+                <li><a href="#">Cart</a></li>
+                <li><a href="#">Wishlist</a></li>
+                <li><a href="#">Shop</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Quick Link</h3>
+            <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms Of Use</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
         </div>
     </div>
-</footer>
+
+    <div class="footer-bottom">
+        <p>&copy; Copyright Exclusive 2023. All rights reserved</p>
+    </div>
+</div>
