--- a/src/views/user/profile.ejs
+++ b/src/views/user/profile.ejs
@@ -2,13 +2,18 @@
     integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
 
 <link rel="stylesheet" href="/asset/css/userProfiles.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 
 <div class="container">
     <div class="row">
         <div class="col-12">
             <!-- Page title -->
             <div class="my-5">
-                <h3 style="color: white;">My Profile</h3>
+                <h3>My Profile</h3>
                 <hr>
             </div>
             <!-- Form START -->
