product-detail-site-udpdate

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -158,8 +158,8 @@
             <h2>
                 <%= newProduct.name %>
             </h2>
-            <p>Is Coming Out Now!</p>
-            <a href="#" class="shop-now-btn">Shop Now</a>
+            <p>Sản Phẩm Mới!</p>
+            <a href="#" class="shop-now-btn">Mua Ngay!</a>
         </div>
         <div class="new-arrival-image">
             <img src="<%= newProduct.images[0].url %>"
